k8s/base/fastapi-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  labels:
    app.kubernetes.io/name: fastapi-app
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fastapi-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fastapi-app
        app.kubernetes.io/component: api
    spec:
      serviceAccountName: fastapi-app
      containers:
        - name: fastapi-app
          image: fastapi-app:latest
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/utils/health-check/
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/utils/health-check/
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 768Mi
